cmd(main): start debug server

--- a/stout-default.conf
+++ b/stout-default.conf
@@ -4,8 +4,10 @@
         "output": "/dev/stderr"
     },
     "endpoints": ["0.0.0.0:29042"],
+    "debugserver": "127.0.0.1:9000",
     "isolate": {
         "docker": {},
         "process": {}
     }
+
 }
