--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - go env
 
 script:
-  - ./.travis/script.sh isolate isolate/docker isolate/process
+  - make
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
