Debianization: rename, fix some lintian warnings

--- a/debian/rules
+++ b/debian/rules
@@ -4,28 +4,28 @@ export DH_ALWAYS_EXCLUDE=.git
 export DH_VERBOSE=0
 export GO15VENDOREXPERIMENT="1"
 
-NAME=cocaine-porto
-BUILDDT=$(shell date -u +%F\ %H:%M:%S)
+NAME=cocaine-isolate-daemon
+BUILDDT=$(shell date -u +%F@%H:%M:%S)
 VERSION=$(shell git show-ref --head --hash head)
 DEBVER=$(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
 CPWD=$(shell pwd)
 VERSIONFILE=${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout/version/version.go
+LDFLAGS=-ldflags "-X github.com/noxiouz/stout/version.Version=${DEBVER} -X github.com/noxiouz/stout/version.Build=${BUILDDT} -X github.com/noxiouz/stout/version.GitHash=${VERSION}"
+
+%:
+	dh $@
 
 override_dh_auto_build:
 	mkdir -p ${CPWD}/debian/tmp/go
 	export GOPATH=${CPWD}/debian/tmp/go
 	mkdir -p ${CPWD}/debian/tmp/go/src/github.com/noxiouz
 	ln -s ${CPWD} ${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout
-	rm -f $(VERSIONFILE)
-	@echo -e "package version\n" > $(VERSIONFILE)
-	@echo -e "const Version string = \"$(DEBVER)\"\n" >> $(VERSIONFILE)
-	@echo -e "const Build string = \"$(BUILDDT)\"\n" >> $(VERSIONFILE)
-	@echo -e "const GitHash string = \"$(VERSION)\"\n" >> $(VERSIONFILE)
-	GOPATH=${CPWD}/debian/tmp/go go build -o ${NAME} ${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout/cmd/stout/main.go
+	
+	GOPATH=${CPWD}/debian/tmp/go go build ${LDFLAGS} -o ${NAME} ${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout/cmd/stout/main.go
 
+override_dh_auto_test:
+	@echo "no tests could be run during build" 
 
-%:
-	dh $@
 
 cleanbuilddir::
 	rm -Rf debian/tmp/
