--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,13 @@
-Source: cocaine-porto
+Source: cocaine-isolate-daemon
 Section: misc
 Priority: extra
 Maintainer: Anton Tyurin <noxiouz@yandex.ru>
-Build-Depends: debhelper (>= 7)
-Standards-Version: 3.8.3
+Build-Depends: debhelper (>= 7), golang (>= 2:1.6)
+Standards-Version: 3.9.5
 
-Package: cocaine-porto
+Package: cocaine-isolate-daemon
 Architecture: amd64
-Description: Run your Docker containers on Cocaine Cloud by Porto
+Depends: ${misc:Depends}
+Description: Run your processes, Docker and Porto containers on Cocaine Cloud
+ It an external isolation plugin for Cocaine Core. Works with Docker, Porto,
+ processes.
