--- a/stout-default.conf
+++ b/stout-default.conf
@@ -9,7 +9,10 @@
         "docker": {
             "endpoint": "unix:///var/run/docker.sock",
             "version": "v1.19",
-            "concurrency": 10
+            "concurrency": 10,
+            "registryauth": {
+                "registry.images.net": "abcde"
+            }
         },
         "process": {
             "spool": "/var/spool/cocaine",
