debian: fix build

--- a/debian/rules
+++ b/debian/rules
@@ -6,10 +6,11 @@ export GO15VENDOREXPERIMENT="1"
 
 NAME=cocaine-isolate-daemon
 BUILDDT=$(shell date -u +%F@%H:%M:%S)
+TAG=$(shell git describe --tags --always)
 VERSION=$(shell git show-ref --head --hash head)
 DEBVER=$(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
 CPWD=$(shell pwd)
-LDFLAGS=-ldflags "-X github.com/noxiouz/stout/version.Version=${DEBVER} -X github.com/noxiouz/stout/version.Build=${BUILDDT} -X github.com/noxiouz/stout/version.GitHash=${VERSION}"
+LDFLAGS=-ldflags "-X github.com/noxiouz/stout/version.GitTag=${TAG} -X github.com/noxiouz/stout/version.Version=${DEBVER} -X github.com/noxiouz/stout/version.Build=${BUILDDT} -X github.com/noxiouz/stout/version.GitHash=${VERSION}"
 
 %:
 	dh $@
@@ -20,7 +21,7 @@ override_dh_auto_build:
 	mkdir -p ${CPWD}/debian/tmp/go/src/github.com/noxiouz
 	ln -s ${CPWD} ${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout
 
-	GOPATH=${CPWD}/debian/tmp/go go build ${LDFLAGS} -o ${NAME} ${CPWD}/cmd/stout/main.go
+	GOPATH=${CPWD}/debian/tmp/go go build ${LDFLAGS} -o ${NAME} ${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout/cmd/stout/main.go
 
 override_dh_auto_test:
 	@echo "no tests could be run during build"
