metrics(graphite): add embedded configurable Graphite sender

--- a/stout-default.conf
+++ b/stout-default.conf
@@ -1,4 +1,11 @@
 {
+    "metrics": {
+        "type": "graphite",
+        "period": "10s",
+        "args": {
+            "addr": ":42000"
+        }
+    },
     "logger": {
         "level": "debug",
         "output": "/dev/stderr"
