exporter(graphite): support prefix with hostname placeholder

--- a/stout-default.conf
+++ b/stout-default.conf
@@ -3,6 +3,7 @@
         "type": "graphite",
         "period": "10s",
         "args": {
+            "prefix": "someprefix.{{hostname}}",
             "addr": ":42000"
         }
     },
