Update the config example

--- a/stout-default.conf
+++ b/stout-default.conf
@@ -25,6 +25,13 @@
         "process": {
             "spool": "/var/spool/cocaine",
             "locator": "localhost:10053"
+        },
+        "porto": {
+            "layers": "/var/tmp/layers",
+            "containers": "/var/tmp/containers",
+            "registryauth": {
+                "registry.images.net": "OAuth token"
+	        }
         }
     }
 }
