--- a/stout-default.conf
+++ b/stout-default.conf
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "metrics": {
         "type": "graphite",
         "period": "10s",
@@ -15,23 +16,32 @@
     "debugserver": "127.0.0.1:9000",
     "isolate": {
         "docker": {
-            "endpoint": "unix:///var/run/docker.sock",
-            "version": "v1.19",
-            "concurrency": 10,
-            "registryauth": {
-                "registry.images.net": "abcde"
+            "type": "docker",
+            "args": {
+                "endpoint": "unix:///var/run/docker.sock",
+                "version": "v1.19",
+                "concurrency": 10,
+                "registryauth": {
+                    "registry.images.net": "abcde"
+                }
             }
         },
         "process": {
-            "spool": "/var/spool/cocaine",
-            "locator": "localhost:10053"
+            "type": "process",
+            "args": {
+                "spool": "/var/spool/cocaine",
+                "locator": "localhost:10053"
+            }
         },
         "porto": {
-            "layers": "/var/tmp/layers",
-            "containers": "/var/tmp/containers",
-            "registryauth": {
-                "registry.images.net": "OAuth token"
-	        }
+            "type": "porto",
+            "args": {
+                "layers": "/var/tmp/layers",
+                "containers": "/var/tmp/containers",
+                "registryauth": {
+                    "registry.images.net": "OAuth token"
+    	        }
+            }
         }
     }
 }
