isolate(porto): introduce Journal for caching layers

--- a/stout-default.conf
+++ b/stout-default.conf
@@ -38,6 +38,7 @@
             "args": {
                 "layers": "/var/tmp/layers",
                 "containers": "/var/tmp/containers",
+                "journal": "/var/tmp/portojournal.jrnl",
                 "registryauth": {
                     "registry.images.net": "OAuth token"
     	        }
