--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ language: go
 sudo: required
 
 go:
- - 1.6.2
-
-services:
- - docker
+ - 1.7.1
 
 before_install:
+ - sudo apt-get update && sudo apt-get install docker-engine -y
  - docker run -d -p 5000:5000 --restart=always --name registry registry:2
  - sudo groupadd porto && sudo dpkg -i ci/yandex-porto_2.11_amd64.deb -y || sudo apt-get install -f -y
 
@@ -32,4 +30,4 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-    go: 1.6.2
+    go: 1.7.1
