--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
  - 1.7.1
 
 before_install:
- - sudo apt-get update && sudo apt-get install docker-engine -y
+ - docker -v
  - docker run -d -p 5000:5000 --restart=always --name registry registry:2
  - sudo groupadd porto && sudo dpkg -i ci/yandex-porto_2.11_amd64.deb -y || sudo apt-get install -f -y
 
