--- a/stout-default.conf
+++ b/stout-default.conf
@@ -39,6 +39,7 @@
                 "layers": "/var/tmp/layers",
                 "containers": "/var/tmp/containers",
                 "journal": "/var/tmp/portojournal.jrnl",
+                "defaultulimits": "core: unlimited unlimited",
                 "registryauth": {
                     "registry.images.net": "OAuth token"
     	        }
