add resolv_conf option for porto

--- a/stout-default.conf
+++ b/stout-default.conf
@@ -37,6 +37,7 @@
             "type": "porto",
             "args": {
                 "layers": "/var/tmp/layers",
+                "defaultresolv_conf": "default",
                 "containers": "/var/tmp/containers",
                 "journal": "/var/tmp/portojournal.jrnl",
                 "defaultulimits": "core: unlimited unlimited",
