--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cocaine-isolate-daemon
 Section: misc
 Priority: extra
 Maintainer: Anton Tyurin <noxiouz@yandex.ru>
-Build-Depends: debhelper (>= 7), golang (>= 2:1.6)
+Build-Depends: debhelper (>= 7), golang (>= 2:1.6), git
 Standards-Version: 3.9.5
 
 Package: cocaine-isolate-daemon
