--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,7 @@ TAG=$(shell git describe --tags --always)
 VERSION=$(shell git show-ref --head --hash head)
 DEBVER=$(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
 CPWD=$(shell pwd)
-LDFLAGS=-ldflags "-X github.com/interiorem/stout/version.GitTag=${TAG} -X github.com/noxiouz/stout/version.Version=${DEBVER} -X github.com/noxiouz/stout/version.Build=${BUILDDT} -X github.com/noxiouz/stout/version.GitHash=${VERSION}"
+LDFLAGS=-ldflags "-X github.com/interiorem/stout/version.GitTag=${TAG} -X github.com/interiorem/stout/version.Version=${DEBVER} -X github.com/interiorem/stout/version.Build=${BUILDDT} -X github.com/interiorem/stout/version.GitHash=${VERSION}"
 
 %:
 	dh $@
@@ -18,10 +18,10 @@ LDFLAGS=-ldflags "-X github.com/interiorem/stout/version.GitTag=${TAG} -X github
 override_dh_auto_build:
 	mkdir -p ${CPWD}/debian/tmp/go
 	export GOPATH=${CPWD}/debian/tmp/go
-	mkdir -p ${CPWD}/debian/tmp/go/src/github.com/noxiouz
-	ln -s ${CPWD} ${CPWD}/debian/tmp/go/src/github.com/noxiouz/stout
-	GOTOOLDIR=${CPWD}/debian/tmp/go/src/github.com/noxiouz/vendor GOPATH=${CPWD}/debian/tmp/go go get -d go.etcd.io/bbolt/...
-	GOTOOLDIR=${CPWD}/debian/tmp/go/src/github.com/noxiouz/vendor GOPATH=${CPWD}/debian/tmp/go go build ${LDFLAGS} -o ${NAME} ${CPWD}/debian/tmp/go/src/github.com/interiorem/stout/cmd/stout/main.go
+	mkdir -p ${CPWD}/debian/tmp/go/src/github.com/interiorem
+	ln -s ${CPWD} ${CPWD}/debian/tmp/go/src/github.com/interiorem/stout
+	GOROOT=/usr/local/go GOTOOLDIR=${CPWD}/debian/tmp/go/src/github.com/interiorem/vendor GOPATH=${CPWD}/debian/tmp/go go get -d go.etcd.io/bbolt/...
+	GOROOT=/usr/local/go GOTOOLDIR=${CPWD}/debian/tmp/go/src/github.com/interiorem/vendor GOPATH=${CPWD}/debian/tmp/go go build ${LDFLAGS} -o ${NAME} ${CPWD}/debian/tmp/go/src/github.com/interiorem/stout/cmd/stout/main.go
 
 override_dh_auto_test:
 	@echo "no tests could be run during build"
